--- a/src/html/includes/main/journey.html
+++ b/src/html/includes/main/journey.html
@@ -1,20 +1,26 @@
-<section id="video" class="journey">
-    <div class="journey__container section-container">
-        <div class="journey-heading">
-            <h2 class="journey__title title">Video journey</h2>
-            <p class="journey-heading__desc-text">
-                Enter and visit one of the most famous museums in the world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code
-            </p>
-        </div>
-        <div class="journey-player">
-            <video class="journey-player__video" src="./uploads/journey.mp4" muted poster="./img/journey/poster0.webp"></video>
-            <button class="journey-player__main-play-btn">
+<section class="journey" id="video">
+  <div class="journey__container section-container">
+    <div class="journey-heading">
+      <h2 class="journey__title title">Video journey</h2>
+      <p class="journey-heading__desc-text">
+        Enter and visit one of the most famous museums in the world and enjoy masterpieces such as
+        Mona Lisa or Hammurabi's Code
+      </p>
+    </div>
+    <div class="journey-player">
+      <video
+        class="journey-player__video"
+        muted
+        poster="./img/journey/poster0.webp"
+        src="./uploads/journey.mp4"
+      ></video>
+      <button class="journey-player__main-play-btn">
         <svg
           class="journey-player__main-play-icon"
-          width="220"
+          fill="none"
           height="220"
           viewBox="0 0 152 152"
-          fill="none"
+          width="220"
           xmlns="http://www.w3.org/2000/svg"
         >
           <path
@@ -27,27 +33,27 @@
           />
         </svg>
       </button>
-            <div class="journey-player__navbar">
-                <button class="navbar__play-btn">
+      <div class="journey-player__navbar">
+        <button class="navbar__play-btn">
           <svg
             class="play-icon"
-            width="23"
+            fill="none"
             height="31"
             viewBox="0 0 23 31"
-            fill="none"
+            width="23"
             xmlns="http://www.w3.org/2000/svg"
           >
             <path d="M23 15.5053L0 0C0 23.3683 0 11.8996 0 31L23 15.5053Z" fill="#B3B3B3" />
           </svg>
         </button>
-                <input class="navbar__play-bar" type="range" />
-                <button class="navbar__volume-btn">
+        <input class="navbar__play-bar" type="range" />
+        <button class="navbar__volume-btn">
           <svg
             class="volume-icon"
-            width="38"
+            fill="none"
             height="31"
             viewBox="0 0 38 31"
-            fill="none"
+            width="38"
             xmlns="http://www.w3.org/2000/svg"
           >
             <path
@@ -64,14 +70,14 @@
             />
           </svg>
         </button>
-                <input class="navbar__volume-bar" type="range" />
-                <button class="navbar__fullscreen-btn">
+        <input class="navbar__volume-bar" type="range" />
+        <button class="navbar__fullscreen-btn">
           <svg
             class="fullscreen-icon"
-            width="35"
+            fill="none"
             height="35"
             viewBox="0 0 35 35"
-            fill="none"
+            width="35"
             xmlns="http://www.w3.org/2000/svg"
           >
             <path
@@ -83,66 +89,148 @@
             <path d="M22.4097 0V4.12222H30.6055V12.3569H34.7083V0H22.4097Z" fill="#B3B3B3" />
           </svg>
         </button>
-            </div>
+      </div>
+    </div>
+    <div class="journey-slider">
+      <div class="journey-slider-inner swiper">
+        <div class="video-list swiper-wrapper">
+          <div class="video-list__item swiper-slide">
+            <iframe
+              allowfullscreen
+              class="slider-video"
+              height="220"
+              loading="lazy"
+              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
+              width="380"
+            ></iframe>
+          </div>
+          <div class="video-list__item swiper-slide">
+            <iframe
+              allowfullscreen
+              class="slider-video"
+              height="220"
+              loading="lazy"
+              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
+              width="380"
+            ></iframe>
+          </div>
+          <div class="video-list__item swiper-slide">
+            <iframe
+              allowfullscreen
+              class="slider-video"
+              height="220"
+              loading="lazy"
+              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
+              width="380"
+            ></iframe>
+          </div>
+          <div class="video-list__item swiper-slide">
+            <iframe
+              allowfullscreen
+              class="slider-video"
+              height="220"
+              loading="lazy"
+              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
+              width="380"
+            ></iframe>
+          </div>
+          <div class="video-list__item swiper-slide">
+            <iframe
+              allowfullscreen
+              class="slider-video"
+              height="220"
+              loading="lazy"
+              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
+              width="380"
+            ></iframe>
+          </div>
+          <div class="video-list__item swiper-slide">
+            <iframe
+              allowfullscreen
+              class="slider-video"
+              height="220"
+              loading="lazy"
+              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
+              width="380"
+            ></iframe>
+          </div>
+          <div class="video-list__item swiper-slide">
+            <iframe
+              allowfullscreen
+              class="slider-video"
+              height="220"
+              loading="lazy"
+              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
+              width="380"
+            ></iframe>
+          </div>
+          <div class="video-list__item swiper-slide">
+            <iframe
+              allowfullscreen
+              class="slider-video"
+              height="220"
+              loading="lazy"
+              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
+              width="380"
+            ></iframe>
+          </div>
+          <div class="video-list__item swiper-slide">
+            <iframe
+              allowfullscreen
+              class="slider-video"
+              height="220"
+              loading="lazy"
+              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
+              width="380"
+            ></iframe>
+          </div>
+          <div class="video-list__item swiper-slide">
+            <iframe
+              allowfullscreen
+              class="slider-video"
+              height="220"
+              loading="lazy"
+              src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
+              width="380"
+            ></iframe>
+          </div>
         </div>
-        <div class="journey-slider">
-            <div class="journey-slider-inner swiper">
-                <div class="video-list swiper-wrapper">
-                    <div class="video-list__item swiper-slide">
-                        <iframe class="slider-video" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" allowfullscreen></iframe>
-                    </div>
-                    <div class="video-list__item swiper-slide">
-                        <iframe class="slider-video" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" allowfullscreen></iframe>
-                    </div>
-                    <div class="video-list__item swiper-slide">
-                        <iframe class="slider-video" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" allowfullscreen></iframe>
-                    </div>
-                    <div class="video-list__item swiper-slide">
-                        <iframe class="slider-video" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" allowfullscreen></iframe>
-                    </div>
-                    <div class="video-list__item swiper-slide">
-                        <iframe class="slider-video" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" allowfullscreen></iframe>
-                    </div>
-                    <div class="video-list__item swiper-slide">
-                        <iframe class="slider-video" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" allowfullscreen></iframe>
-                    </div>
-                    <div class="video-list__item swiper-slide">
-                        <iframe class="slider-video" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" allowfullscreen></iframe>
-                    </div>
-                    <div class="video-list__item swiper-slide">
-                        <iframe class="slider-video" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" allowfullscreen></iframe>
-                    </div>
-                    <div class="video-list__item swiper-slide">
-                        <iframe class="slider-video" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" allowfullscreen></iframe>
-                    </div>
-                    <div class="video-list__item swiper-slide">
-                        <iframe class="slider-video" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" allowfullscreen></iframe>
-                    </div>
-                </div>
-            </div>
-            <div class="journey-slider__nav">
-                <div class="journey-slider__btn-prev swiper-button-prev">
-                    <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+      </div>
+      <div class="journey-slider__nav">
+        <div class="journey-slider__btn-prev swiper-button-prev">
+          <svg
+            fill="none"
+            height="12"
+            viewBox="0 0 10 12"
+            width="10"
+            xmlns="http://www.w3.org/2000/svg"
+          >
             <path
-              fill-rule="evenodd"
               clip-rule="evenodd"
               d="M5.4777 0.219168C5.87773 0.564178 5.94259 1.19347 5.62256 1.62473L2.37578 6.00004L5.62256 10.3753C5.94259 10.8066 5.87773 11.4359 5.4777 11.7809C5.07766 12.1259 4.49394 12.056 4.17391 11.6247L0 6.00004L4.17391 0.375342C4.49394 -0.0559202 5.07766 -0.125842 5.4777 0.219168ZM9.65184 0.219168C10.0519 0.564178 10.1167 1.19347 9.7967 1.62473L6.54992 6.00004L9.7967 10.3753C10.1167 10.8066 10.0519 11.4359 9.65184 11.7809C9.2518 12.1259 8.66808 12.056 8.34805 11.6247L4.17414 6.00004L8.34805 0.375342C8.66808 -0.0559202 9.2518 -0.125842 9.65184 0.219168Z"
               fill="#999999"
+              fill-rule="evenodd"
             />
           </svg>
-                </div>
-                <div class="journey-slider__pagination swiper-pagination"></div>
-                <div class="journey-slider__btn-next swiper-button-next">
-                    <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+        </div>
+        <div class="journey-slider__pagination swiper-pagination"></div>
+        <div class="journey-slider__btn-next swiper-button-next">
+          <svg
+            fill="none"
+            height="12"
+            viewBox="0 0 10 12"
+            width="10"
+            xmlns="http://www.w3.org/2000/svg"
+          >
             <path
-              fill-rule="evenodd"
               clip-rule="evenodd"
               d="M0.348163 0.219168C0.748196 -0.125842 1.33192 -0.0559202 1.65195 0.375342L5.82586 6.00004L1.65194 11.6247C1.33192 12.056 0.748195 12.1259 0.348162 11.7809C-0.0518709 11.4359 -0.116729 10.8066 0.203297 10.3753L3.45008 6.00004L0.203298 1.62473C-0.116728 1.19347 -0.05187 0.564177 0.348163 0.219168ZM4.5223 0.219168C4.92234 -0.125841 5.50606 -0.0559197 5.82609 0.375342L10 6.00004L5.82609 11.6247C5.50606 12.056 4.92234 12.1259 4.5223 11.7809C4.12227 11.4359 4.05741 10.8066 4.37744 10.3753L7.62422 6.00004L4.37744 1.62473C4.05741 1.19347 4.12227 0.564178 4.5223 0.219168Z"
               fill="#999999"
+              fill-rule="evenodd"
             />
           </svg>
-                </div>
-            </div>
         </div>
+      </div>
     </div>
+  </div>
 </section>
