--- a/src/html/includes/main/hero.html
+++ b/src/html/includes/main/hero.html
@@ -1,44 +1,85 @@
 <section class="hero">
-    <div class="hero__container section-container">
-        <div class="hero__title">
-            <h2 class="hero__title-text title">
-                Welcome <br /> to the Louvre
-            </h2>
-            <p class="hero__title-desc">From the castle to the museum</p>
-            <a class="btn" href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736">
+  <div class="hero__container section-container">
+    <div class="hero__title">
+      <h2 class="hero__title-text title">
+        Welcome <br />
+        to the Louvre
+      </h2>
+      <p class="hero__title-desc">From the castle to the museum</p>
+      <a
+        class="btn"
+        href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
+      >
         Discover the Louvre
       </a>
-        </div>
-        <div class="hero-slider swiper">
-            <div class="hero-slider__images swiper-wrapper">
-                <img class="hero-slider__image swiper-slide" src="./img/hero/hero-image1.webp" alt="" loading="lazy" />
-                <img class="hero-slider__image swiper-slide" src="./img/hero/hero-image2.webp" alt="" loading="lazy" />
-                <img class="hero-slider__image swiper-slide" src="./img/hero/hero-image3.webp" alt="" loading="lazy" />
-                <img class="hero-slider__image swiper-slide" src="./img/hero/hero-image4.webp" alt="" loading="lazy" />
-                <img class="hero-slider__image swiper-slide" src="./img/hero/hero-image5.webp" alt="" loading="lazy" />
-            </div>
-            <div class="hero-slider__nav">
-                <div class="hero-slider__pagination swiper-pagination"></div>
-                <div class="hero-slider__scroll swiper-scrollbar"></div>
-                <div class="hero-slider__arrows">
-                    <div class="hero-slider__prev swiper-button-prev">
-                        <svg width="30" height="8" viewBox="0 0 30 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+    </div>
+    <div class="hero-slider swiper">
+      <div class="hero-slider__images swiper-wrapper">
+        <img
+          class="hero-slider__image swiper-slide"
+          src="./img/hero/hero-image1.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="hero-slider__image swiper-slide"
+          src="./img/hero/hero-image2.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="hero-slider__image swiper-slide"
+          src="./img/hero/hero-image3.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="hero-slider__image swiper-slide"
+          src="./img/hero/hero-image4.webp"
+          alt=""
+          loading="lazy"
+        />
+        <img
+          class="hero-slider__image swiper-slide"
+          src="./img/hero/hero-image5.webp"
+          alt=""
+          loading="lazy"
+        />
+      </div>
+      <div class="hero-slider__nav">
+        <div class="hero-slider__pagination swiper-pagination"></div>
+        <div class="hero-slider__scroll swiper-scrollbar"></div>
+        <div class="hero-slider__arrows">
+          <div class="hero-slider__prev swiper-button-prev">
+            <svg
+              width="30"
+              height="8"
+              viewBox="0 0 30 8"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
               <path
                 d="M5.72254 8C3.90173 6.31339 1.99422 5.08262 0 4.30769V3.69231C1.99422 2.89459 3.90173 1.66382 5.72254 0H7.23988C6.37283 1.4359 5.53468 2.52991 4.72543 3.28205H30V4.71795H4.72543C5.53468 5.47009 6.37283 6.5641 7.23988 8H5.72254Z"
                 fill="white"
               />
             </svg>
-                    </div>
-                    <div class="hero-slider__next swiper-button-next">
-                        <svg width="30" height="8" viewBox="0 0 30 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+          </div>
+          <div class="hero-slider__next swiper-button-next">
+            <svg
+              width="30"
+              height="8"
+              viewBox="0 0 30 8"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
               <path
                 d="M24.2775 1.97284e-06C26.0983 1.68661 28.0058 2.91738 30 3.69231L30 4.30769C28.0058 5.10541 26.0983 6.33618 24.2775 8L22.7601 8C23.6272 6.5641 24.4653 5.47009 25.2746 4.71795L3.48964e-07 4.71795L5.01636e-07 3.28205L25.2746 3.28205C24.4653 2.52992 23.6272 1.4359 22.7601 1.86378e-06L24.2775 1.97284e-06Z"
                 fill="white"
               />
             </svg>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </section>
