--- a/src/html/includes/main/parallax.html
+++ b/src/html/includes/main/parallax.html
@@ -1,5 +1,5 @@
 <div class="parallax">
-    <picture class="parallax__container">
-        <img class="parallax__bg-image" src="/img/parallax/parallax-image.webp" alt="" loading="lazy" />
-    </picture>
+  <picture class="parallax__container">
+    <img alt="" class="parallax__bg-image" loading="lazy" src="/img/parallax/parallax-image.webp" />
+  </picture>
 </div>
