--- a/src/html/includes/register.html
+++ b/src/html/includes/register.html
@@ -1,31 +1,101 @@
 <section class="register">
-    <div class="register__container section-container">
-        <h1 class="register__title title">Register</h1>
-        <form action="" class="register__body">
-            <label class="register__field auth-field" for="username">
-            <svg class="register__field-icon" width="20" height="20" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M7.9017 9.45749C7.9017 9.43118 7.91838 9.40973 7.91838 9.38536V7.71004C7.91142 7.66336 7.90132 7.61714 7.88815 7.57165C8.54145 7.19251 9.07974 6.66291 9.45149 6.03359C9.82325 5.40426 10.016 4.69625 10.0114 3.97732C10.0114 1.78058 8.4385 0 6.49976 0C4.56101 0 2.98813 1.77961 2.98813 3.97732C3.00484 4.69886 3.21494 5.40495 3.59918 6.03088C3.98343 6.6568 4.52954 7.18253 5.18746 7.55993C5.1719 7.60906 5.1604 7.65926 5.15306 7.71004V9.3834C5.1558 9.39688 5.15928 9.41023 5.16348 9.42338C2.19283 9.76643 -0.000244141 11.2751 -0.000244141 12.7672C-0.000244141 14.464 2.90891 15 6.49976 15C10.0906 15 12.9998 14.464 12.9998 12.7672C12.9987 11.3131 10.7952 9.84635 7.9017 9.45749Z" fill="#030303"/>
-            </svg>
-          <input class="register__field-data auth-field-data" type="text" placeholder="Username" id="username" autocomplete="off">
-        </label>
-            <label class="register__field auth-field" for="email">
-          <svg class="register__field-icon" width="20" height="20" viewBox="0 0 15 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M14.443 0.000245271H0.554862C0.481958 8.78986e-05 0.409744 0.0163595 0.342363 0.0481753C0.274982 0.0799912 0.213762 0.126701 0.162211 0.185623C0.11066 0.244546 0.0697941 0.314543 0.0419587 0.391559C0.0141232 0.468575 -0.000136697 0.551124 9.87603e-07 0.634453V10.366C-0.000136697 10.4493 0.0141232 10.5319 0.0419587 10.6089C0.0697941 10.6859 0.11066 10.7559 0.162211 10.8148C0.213762 10.8737 0.274982 10.9204 0.342363 10.9522C0.409744 10.9841 0.481958 11.0004 0.554862 11.0002H14.443C14.516 11.0004 14.5884 10.9841 14.6559 10.9523C14.7234 10.9205 14.7847 10.8738 14.8364 10.8149C14.8882 10.7561 14.9292 10.6861 14.9573 10.6091C14.9853 10.5321 14.9999 10.4494 15 10.366V0.634453C14.9999 0.551012 14.9853 0.468406 14.9573 0.391377C14.9292 0.314347 14.8882 0.244369 14.8364 0.185478C14.7847 0.126587 14.7234 0.0799255 14.6559 0.0481389C14.5884 0.0163523 14.516 8.82793e-05 14.443 0.000245271ZM13.6688 2.88578L7.83908 6.73878H7.37931L1.55173 2.88698C1.48634 2.84354 1.42908 2.7858 1.38322 2.71706C1.33735 2.64832 1.30378 2.56994 1.28443 2.48638C1.26507 2.40281 1.2603 2.31567 1.2704 2.23C1.28049 2.14432 1.30525 2.06177 1.34326 1.98703C1.38127 1.91229 1.43179 1.84686 1.49193 1.79443C1.55207 1.74201 1.62065 1.70364 1.69377 1.68152C1.76688 1.65939 1.84309 1.65394 1.91804 1.66548C1.993 1.67702 2.06523 1.70532 2.13062 1.74876L7.60815 5.37005L13.0857 1.74876C13.1511 1.70532 13.2233 1.67702 13.2983 1.66548C13.3732 1.65394 13.4494 1.65939 13.5225 1.68152C13.5956 1.70364 13.6642 1.74201 13.7244 1.79443C13.7845 1.84686 13.835 1.91229 13.873 1.98703C13.9111 2.06177 13.9358 2.14432 13.9459 2.23C13.956 2.31567 13.9512 2.40281 13.9319 2.48638C13.9125 2.56994 13.8789 2.64832 13.8331 2.71706C13.7872 2.7858 13.73 2.84354 13.6646 2.88698L13.6688 2.88578Z" fill="#030303"/>
-          </svg>            
-        <input class="register__field-data auth-field-data" type="email" placeholder="Email" id="email" autocomplete="off">
+  <div class="register__container section-container">
+    <h1 class="register__title title">Register</h1>
+    <form action="" class="register__body">
+      <label class="register__field auth-field" for="username">
+        <svg
+          class="register__field-icon"
+          width="20"
+          height="20"
+          viewBox="0 0 13 15"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M7.9017 9.45749C7.9017 9.43118 7.91838 9.40973 7.91838 9.38536V7.71004C7.91142 7.66336 7.90132 7.61714 7.88815 7.57165C8.54145 7.19251 9.07974 6.66291 9.45149 6.03359C9.82325 5.40426 10.016 4.69625 10.0114 3.97732C10.0114 1.78058 8.4385 0 6.49976 0C4.56101 0 2.98813 1.77961 2.98813 3.97732C3.00484 4.69886 3.21494 5.40495 3.59918 6.03088C3.98343 6.6568 4.52954 7.18253 5.18746 7.55993C5.1719 7.60906 5.1604 7.65926 5.15306 7.71004V9.3834C5.1558 9.39688 5.15928 9.41023 5.16348 9.42338C2.19283 9.76643 -0.000244141 11.2751 -0.000244141 12.7672C-0.000244141 14.464 2.90891 15 6.49976 15C10.0906 15 12.9998 14.464 12.9998 12.7672C12.9987 11.3131 10.7952 9.84635 7.9017 9.45749Z"
+            fill="#030303"
+          />
+        </svg>
+        <input
+          class="register__field-data auth-field-data"
+          type="text"
+          placeholder="Username"
+          id="username"
+          autocomplete="off"
+        />
       </label>
-            <label class="register__field auth-field" for="password">
-          <svg class="register__field-icon" width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26.31 34.98"><g data-name="Layer 2"><path d="M24.23,13H21.9V8.74a8.75,8.75,0,0,0-17.49,0V13H2.08A2.08,2.08,0,0,0,0,15.12V32.9A2.08,2.08,0,0,0,2.08,35H24.23a2.08,2.08,0,0,0,2.08-2.08V15.12A2.08,2.08,0,0,0,24.23,13ZM7.33,8.74A5.83,5.83,0,1,1,19,8.74V13H7.33ZM23.48,32.15H2.83V15.87H23.48Z" data-name="Layer 1"/></g></svg>
-          <input class="register__field-data auth-field-data" type="password" placeholder="Password" id="password">
-        </label>
-            <label class="register__field auth-field" for="password-confirm">
-              <svg  class="register__field-icon" width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 1C5.926 1 1 5.926 1 12s4.926 11 11 11 11-4.926 11-11S18.074 1 12 1zm-1.5 15.5L6 12l1.5-1.5 3 3 5.956-5.956 1.5 1.413L10.5 16.5z"/></svg>
-          <input class="register__field-data auth-field-data" type="password" placeholder="Confirm password" id="password-confirm">
-        </label>
-            <div class="register__body-bottom">
-                <button class="register__btn-signup auth-btn" type="submit">Sign up</button>
-            </div>
-            <span class="register__undertext-inner auth-undertext-inner">Already have an account? <a class="register__undertext--link auth-undertext-link" href="login-page.html">Log in</a></span>
-        </form>
-    </div>
+      <label class="register__field auth-field" for="email">
+        <svg
+          class="register__field-icon"
+          width="20"
+          height="20"
+          viewBox="0 0 15 11"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M14.443 0.000245271H0.554862C0.481958 8.78986e-05 0.409744 0.0163595 0.342363 0.0481753C0.274982 0.0799912 0.213762 0.126701 0.162211 0.185623C0.11066 0.244546 0.0697941 0.314543 0.0419587 0.391559C0.0141232 0.468575 -0.000136697 0.551124 9.87603e-07 0.634453V10.366C-0.000136697 10.4493 0.0141232 10.5319 0.0419587 10.6089C0.0697941 10.6859 0.11066 10.7559 0.162211 10.8148C0.213762 10.8737 0.274982 10.9204 0.342363 10.9522C0.409744 10.9841 0.481958 11.0004 0.554862 11.0002H14.443C14.516 11.0004 14.5884 10.9841 14.6559 10.9523C14.7234 10.9205 14.7847 10.8738 14.8364 10.8149C14.8882 10.7561 14.9292 10.6861 14.9573 10.6091C14.9853 10.5321 14.9999 10.4494 15 10.366V0.634453C14.9999 0.551012 14.9853 0.468406 14.9573 0.391377C14.9292 0.314347 14.8882 0.244369 14.8364 0.185478C14.7847 0.126587 14.7234 0.0799255 14.6559 0.0481389C14.5884 0.0163523 14.516 8.82793e-05 14.443 0.000245271ZM13.6688 2.88578L7.83908 6.73878H7.37931L1.55173 2.88698C1.48634 2.84354 1.42908 2.7858 1.38322 2.71706C1.33735 2.64832 1.30378 2.56994 1.28443 2.48638C1.26507 2.40281 1.2603 2.31567 1.2704 2.23C1.28049 2.14432 1.30525 2.06177 1.34326 1.98703C1.38127 1.91229 1.43179 1.84686 1.49193 1.79443C1.55207 1.74201 1.62065 1.70364 1.69377 1.68152C1.76688 1.65939 1.84309 1.65394 1.91804 1.66548C1.993 1.67702 2.06523 1.70532 2.13062 1.74876L7.60815 5.37005L13.0857 1.74876C13.1511 1.70532 13.2233 1.67702 13.2983 1.66548C13.3732 1.65394 13.4494 1.65939 13.5225 1.68152C13.5956 1.70364 13.6642 1.74201 13.7244 1.79443C13.7845 1.84686 13.835 1.91229 13.873 1.98703C13.9111 2.06177 13.9358 2.14432 13.9459 2.23C13.956 2.31567 13.9512 2.40281 13.9319 2.48638C13.9125 2.56994 13.8789 2.64832 13.8331 2.71706C13.7872 2.7858 13.73 2.84354 13.6646 2.88698L13.6688 2.88578Z"
+            fill="#030303"
+          />
+        </svg>
+        <input
+          class="register__field-data auth-field-data"
+          type="email"
+          placeholder="Email"
+          id="email"
+          autocomplete="off"
+        />
+      </label>
+      <label class="register__field auth-field" for="password">
+        <svg
+          class="register__field-icon"
+          width="20"
+          height="20"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 26.31 34.98"
+        >
+          <g data-name="Layer 2">
+            <path
+              d="M24.23,13H21.9V8.74a8.75,8.75,0,0,0-17.49,0V13H2.08A2.08,2.08,0,0,0,0,15.12V32.9A2.08,2.08,0,0,0,2.08,35H24.23a2.08,2.08,0,0,0,2.08-2.08V15.12A2.08,2.08,0,0,0,24.23,13ZM7.33,8.74A5.83,5.83,0,1,1,19,8.74V13H7.33ZM23.48,32.15H2.83V15.87H23.48Z"
+              data-name="Layer 1"
+            />
+          </g>
+        </svg>
+        <input
+          class="register__field-data auth-field-data"
+          type="password"
+          placeholder="Password"
+          id="password"
+        />
+      </label>
+      <label class="register__field auth-field" for="password-confirm">
+        <svg
+          class="register__field-icon"
+          width="20"
+          height="20"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+        >
+          <path
+            d="M12 1C5.926 1 1 5.926 1 12s4.926 11 11 11 11-4.926 11-11S18.074 1 12 1zm-1.5 15.5L6 12l1.5-1.5 3 3 5.956-5.956 1.5 1.413L10.5 16.5z"
+          />
+        </svg>
+        <input
+          class="register__field-data auth-field-data"
+          type="password"
+          placeholder="Confirm password"
+          id="password-confirm"
+        />
+      </label>
+      <div class="register__body-bottom">
+        <button class="register__btn-signup auth-btn" type="submit">Sign up</button>
+      </div>
+      <span class="register__undertext-inner auth-undertext-inner"
+        >Already have an account?
+        <a class="register__undertext--link auth-undertext-link" href="login-page.html"
+          >Log in</a
+        ></span
+      >
+    </form>
+  </div>
 </section>
